--- a/bower.json
+++ b/bower.json
@@ -9,8 +9,11 @@
     "angular": "~1.5.0",
     "angular-ui-router": "~0.2.15",
     "angular-animate": "~1.5.0",
+    "angular-sanitize": "~1.5.0",
     "oclazyload" : "~1.0.8",
     "angular-hotkeys": "https://github.com/chieffancypants/angular-hotkeys.git#~1.6.0",
-    "angular-translate": "~2.8.1"
+    "angular-translate": "~2.8.1",
+    "angular-xml": "~2.2.1",
+    "xml2json": "http://goessner.net/download/prj/jsonxml/xml2json.js"
   }
 }
